--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-04-01 13:24+0200\n"
+"POT-Creation-Date: 2019-04-30 16:27+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -22,8 +22,59 @@ msgstr "Adressen"
 msgid "Roadworks"
 msgstr "Strassenbaustellen"
 
+msgid "Mission Reports"
+msgstr "Einsatzberichte"
+
 msgid "Update"
 msgstr "Aktualisieren"
+
+msgid "Vehicles"
+msgstr "Fahrzeuge"
+
+msgid "Edit"
+msgstr "Bearbeiten"
+
+msgid "Add"
+msgstr "Hinzufügen"
+
+msgid "Mission Report"
+msgstr "Einsatzbericht"
+
+msgid "Vehicle"
+msgstr "Fahrzeug"
+
+msgid "Date"
+msgstr "Datum"
+
+msgid "Mission duration (h)"
+msgstr "Einsatzdauer (h)"
+
+msgid "Mission nature"
+msgstr "Einsatzart"
+
+msgid "Location"
+msgstr "Ort"
+
+msgid "Mission personnel"
+msgstr "Personal Einsatz"
+
+msgid "Backup personnel"
+msgstr "Personal Bereitschaft"
+
+msgid "Civil Defence involvement"
+msgstr "Beteiligung Zivilschutz"
+
+msgid "Name"
+msgstr "Name"
+
+msgid "Description"
+msgstr "Beschreibung"
+
+msgid "Symbol"
+msgstr "Symbol"
+
+msgid "Website"
+msgstr "Webseite"
 
 msgid "Start"
 msgstr "Von"
@@ -64,6 +115,27 @@ msgstr "GIS-Information öffnen"
 msgid "Back"
 msgstr "Zurück"
 
+msgid "No mission reports found."
+msgstr "Keine Einsatzberichte gefunden."
+
+msgid "Alarm"
+msgstr "Alarm"
+
+msgid "Duration"
+msgstr "Dauer"
+
+msgid "Pers*"
+msgstr "Pers*"
+
+msgid "Mission duration"
+msgstr "Einsatzdauer"
+
+msgid "Yes"
+msgstr "Ja"
+
+msgid "No"
+msgstr "Nein"
+
 msgid "Failed to connect to Projektdatenbank."
 msgstr "Keine Verbindung zu Projektdatenbank."
 
@@ -88,6 +160,21 @@ msgstr "Stadtkreis"
 msgid "Neighbourhood"
 msgstr "Quartier"
 
+msgid "No vehicles found."
+msgstr "Keine Fahrzeuge gefunden."
+
+msgid "Successfully added a mission report"
+msgstr "Der Einsatzbericht wurde hinzugefügt"
+
+msgid "Your changes were saved"
+msgstr "Ihre Änderungen wurden gespeichert"
+
+msgid "Successfully added a vehicle"
+msgstr "Das Fahrzeug wurde hinzugefügt"
+
+msgid "New"
+msgstr "Neu"
+
 msgid "Connection Error"
 msgstr "Verbindungsfehler"
 
@@ -96,6 +183,3 @@ msgstr "Strassenverzeichnis"
 
 msgid "The streets directory has been updated"
 msgstr "Das Strassenverzeichnis wurde aktualisiert"
-
-#~ msgid "Invalid YAML format"
-#~ msgstr "Ungültiges YAML Format"
