--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-05-01 17:42+0200\n"
+"POT-Creation-Date: 2019-05-02 16:01+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -155,6 +155,9 @@ msgstr "Zurück"
 msgid "No mission reports found."
 msgstr "Keine Einsatzberichte gefunden."
 
+msgid "Total missions in ${year}"
+msgstr "Total Einsätze im Jahr ${year}"
+
 msgid "Alarm"
 msgstr "Alarm"
 
@@ -211,6 +214,9 @@ msgstr "Verborgen"
 
 msgid "Visible"
 msgstr "Sichtbar"
+
+msgid "Images"
+msgstr "Bilder"
 
 msgid "Successfully added a mission report"
 msgstr "Der Einsatzbericht wurde hinzugefügt"
