--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-05-02 16:01+0200\n"
+"POT-Creation-Date: 2019-05-03 09:44+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -30,6 +30,9 @@ msgstr "Aktualisieren"
 
 msgid "Vehicles"
 msgstr "Fahrzeuge"
+
+msgid "Images"
+msgstr "Bilder"
 
 msgid "Edit"
 msgstr "Bearbeiten"
@@ -167,6 +170,9 @@ msgstr "Dauer"
 msgid "Pers*"
 msgstr "Pers*"
 
+msgid "* Legend Personnel"
+msgstr "* Legende Personal"
+
 msgid "Mission duration"
 msgstr "Einsatzdauer"
 
@@ -214,9 +220,6 @@ msgstr "Verborgen"
 
 msgid "Visible"
 msgstr "Sichtbar"
-
-msgid "Images"
-msgstr "Bilder"
 
 msgid "Successfully added a mission report"
 msgstr "Der Einsatzbericht wurde hinzugefügt"
