--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-05-03 09:44+0200\n"
+"POT-Creation-Date: 2019-05-03 13:42+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -220,6 +220,12 @@ msgstr "Verborgen"
 
 msgid "Visible"
 msgstr "Sichtbar"
+
+msgid "Successfully deleted mission report"
+msgstr "Einsatzbericht erfolgreich gelöscht"
+
+msgid "Successfully deleted vehicle"
+msgstr "Fahrzeug erfolgreich gelöscht"
 
 msgid "Successfully added a mission report"
 msgstr "Der Einsatzbericht wurde hinzugefügt"
