--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-06-20 17:55+0200\n"
+"POT-Creation-Date: 2019-06-21 10:57+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -190,17 +190,23 @@ msgstr "Zurück zur Übersicht"
 msgid "Search in ${directory}"
 msgstr "Suche in ${directory}"
 
+msgid "Your monthly costs"
+msgstr "Ihre monatlichen Kosten"
+
+msgid "Our monthly contribution"
+msgstr "Unser monatlicher Beitrag"
+
 msgid "Note"
-msgstr ""
+msgstr "Notiz"
 
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 msgid "Operation"
-msgstr ""
+msgstr "Operation"
 
 msgid "Amount"
-msgstr ""
+msgstr "Betrag"
 
 msgid "Responsible Official Construction Site"
 msgstr "Zuständiger Sachbearbeiter Baustelle"
