--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-06-21 10:57+0200\n"
+"POT-Creation-Date: 2019-06-21 11:09+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -189,6 +189,9 @@ msgstr "Zurück zur Übersicht"
 
 msgid "Search in ${directory}"
 msgstr "Suche in ${directory}"
+
+msgid "Summary"
+msgstr "Zusammenfassung"
 
 msgid "Your monthly costs"
 msgstr "Ihre monatlichen Kosten"
