--- a/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
+++ b/onegov/winterthur/locale/de_CH/LC_MESSAGES/onegov.winterthur.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2019-07-22 11:10+0200\n"
+"POT-Creation-Date: 2019-08-26 09:16+0200\n"
 "PO-Revision-Date: 2017-03-02 09:52+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -346,14 +346,17 @@ msgstr "Einsatzbericht erfolgreich gelöscht"
 msgid "Successfully deleted vehicle"
 msgstr "Fahrzeug erfolgreich gelöscht"
 
-msgid "Successfully added a mission report"
-msgstr "Der Einsatzbericht wurde hinzugefügt"
-
 msgid "Your changes were saved"
 msgstr "Ihre Änderungen wurden gespeichert"
 
 msgid "Successfully added a vehicle"
 msgstr "Das Fahrzeug wurde hinzugefügt"
+
+msgid "The report was entered in the current year, please verify the date"
+msgstr "Der Einsatzbericht wurde nicht zum aktuellen Jahr hinzugefügt, bitte überprüfen Sie das Datum"
+
+msgid "Successfully added a mission report"
+msgstr "Der Einsatzbericht wurde hinzugefügt"
 
 msgid "New"
 msgstr "Neu"
